# Uptodown-Assistant

./: .gitignore  main.py  pyproject.toml  test.py
src/config/: set_text.py
src/modules/: bot_init.py  get_url.py  notion.py  webserver.py
